--- a/shard.yml
+++ b/shard.yml
@@ -10,6 +10,7 @@ development_dependencies:
     github: crystal-ameba/ameba
     version: ~> 0.14.0
 
-crystal: 0.36.1
+# TODO: Update to "~> 1" once the time comes.
+crystal: ">= 0.36, < 2"
 
 license: MIT
